--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -629,6 +629,13 @@ config MSM_PERFORMANCE
 	  It ensures that no more than a user specified number of CPUs stay
 	  online at any given point in time.
 
+config QCOM_GSBI
+        tristate "QCOM General Serial Bus Interface"
+        help
+          Say y here to enable GSBI support.  The GSBI provides control
+          functions for connecting the underlying serial UART, SPI, and I2C
+          devices to the output pins.
+
 config QCOM_NPA_DUMP
 	bool "Read NPA dump from the RPM memory"
 	depends on DEBUG_FS
