--- a/arch/arm/configs/yuga_defconfig
+++ b/arch/arm/configs/yuga_defconfig
@@ -222,7 +222,6 @@ CONFIG_NFC_PN544=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_CMA=y
-CONFIG_PROC_DEVICETREE=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
@@ -600,6 +599,12 @@ CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_PUBLIC_KEY_ALGO_RSA=y
 CONFIG_X509_CERTIFICATE_PARSER=y
-CONFIG_DEBUG_LL=y
-CONFIG_DEBUG_LL_UART_NONE=y
-CONFIG_EARLY_PRINTK=y
+#CONFIG_DEVTMPFS=y
+#CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_PINCTRL_MSM_TLMM=y
+CONFIG_PINCTRL_MSM=y
+CONFIG_PINCTRL_APQ8064=y
+#CONFIG_DEBUG_LL=y
+#CONFIG_DEBUG_LL_UART_NONE=y
+#CONFIG_EARLY_PRINTK=y
+
