--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -36,11 +36,13 @@ config ARCH_MSM8974
 	select ENABLE_VMALLOC_SAVINGS
 	select MSM_IRQ
 	select PINCTRL
-	select PINCTRL_MSM_TLMM
 	select HAVE_NMI_WATCHDOG if MSM_WATCHDOG_V2
 
 config ARCH_APQ8064
 	bool "APQ8064"
+	select RESET_CONTROLLER
+	select REGMAP
+	select REGMAP_MMIO
 
 config ARCH_APQ8084
 	bool "APQ8084"
